# CppMath

./: CMakeLists.txt  GenerateXcodeProject.command  README.md  cppmath_config.h.in  cppmath_matrix.cpp  cppmath_matrix.hpp
src/: CMakeLists.txt  cppmath.cpp  cppmath.hpp  cppmath_functions.cpp  cppmath_functions.hpp  cppmath_matrix.cpp  cppmath_matrix.hpp  cppmath_matrix_base.cpp  cppmath_matrix_base.hpp
unit_tests/: CMakeLists.txt  cppmath_matrix_test.cpp
